test/codegen-errors.si
// RUN: ! silc %s --split-input-file 2>&1 | FileCheck %s

mod UnassignedOutput {
    // CHECK: error: output `a` has not been assigned
    output a: uint<32>;
}

// -----

mod BadAssignLHS {
    // CHECK: error: expression `1u32` cannot appear on left-hand side of `=`
    1u32 = 2u32;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    input x: uint<32>;
    // CHECK: error: port `x` already defined
    input x: uint<32>;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    output x: uint<42>;
    // CHECK: error: port `x` already defined
    output x: uint<42>;
}

// -----

mod Foo {
    // CHECK: info: previous definition of port `x` was here
    input x: uint<42>;
    // CHECK: error: port `x` already defined
    output x: uint<42>;
}

// -----

mod UnknownFunction {
    // CHECK: error: unknown function `foo`
    foo();
}

// -----

mod UnknownFunction {
    // CHECK: error: unknown function `foo`
    0.foo();
}

// -----

mod Foo {
    input a: uint<1>;
    // CHECK: error: invalid receiver: `set` must be called on a wire
    a.set(a);
}

// -----

mod Foo {
    input a: uint<1>;
    // CHECK: error: invalid receiver: `next` must be called on a register
    a.next(a);
}
